--- a/clusters/local/infrastructure.yaml
+++ b/clusters/local/infrastructure.yaml
@@ -1,4 +1,5 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1 
+# clusters/local/infrastructure.yaml
+apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: infrastructure
@@ -6,6 +7,23 @@ metadata:
 spec:
   interval: 10m
   path: "./infrastructure"
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  prune: true
+  wait: true
+  timeout: 5m
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: metallb-config
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: infrastructure  # Wait for MetalLB to be installed first
+  interval: 10m
+  path: "./infrastructure/metallb-config"
   sourceRef:
     kind: GitRepository
     name: flux-system
