--- a/clusters/local/infrastructure.yaml
+++ b/clusters/local/infrastructure.yaml
@@ -30,3 +30,20 @@ spec:
   prune: true
   wait: true
   timeout: 5m
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: ingress-nginx
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: metallb-config
+  interval: 10m
+  path: "./infrastructure/ingress-nginx"
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  prune: true
+  wait: true
+  timeout: 10m  
