--- a/infrastructure/ingress-nginx/helmrelease.yaml
+++ b/infrastructure/ingress-nginx/helmrelease.yaml
@@ -1,3 +1,4 @@
+# infrastructure/ingress-nginx/helmrelease-simple.yaml
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
@@ -6,7 +7,7 @@ metadata:
 spec:
   releaseName: ingress-nginx
   targetNamespace: ingress-nginx
-  interval: 30m
+  interval: 5m
   chart:
     spec:
       chart: ingress-nginx
@@ -19,18 +20,22 @@ spec:
     controller:
       service:
         type: LoadBalancer
-        loadBalancerIP: ""
         ports:
           http: 80
           https: 443
-        targetPorts:
-          http: http
-          https: https
       ingressClassResource:
         name: nginx
         enabled: true
         default: true
         controllerValue: "k8s.io/ingress-nginx"
+      config:
+        custom-http-errors: "404"
+      server-snippet: |
+        error_page 404 = @redirect_404;
+        
+        location @redirect_404 {
+          return 302 https://www.google.com;
+        }
       metrics:
         enabled: true
       resources:
