--- a/infrastructure/ingress-nginx/helmrelease.yaml
+++ b/infrastructure/ingress-nginx/helmrelease.yaml
@@ -1,4 +1,4 @@
-# infrastructure/ingress-nginx/helmrelease-simple.yaml
+# infrastructure/ingress-nginx/helmrelease.yaml
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
@@ -28,14 +28,29 @@ spec:
         enabled: true
         default: true
         controllerValue: "k8s.io/ingress-nginx"
+      
       config:
         custom-http-errors: "404"
+        
+      # Add server snippet to handle 404s BEFORE they reach backends
       server-snippet: |
+        # Handle specific 404 paths that should redirect to Google
+        location ~* ^/(notfound|nonexistent|missing) {
+          return 302 https://www.google.com;
+        }
+        
+        # Default error page for other 404s
         error_page 404 = @redirect_404;
         
         location @redirect_404 {
+          # Check if it's a path that should redirect to Google
+          if ($request_uri ~* ^/(notfound|nonexistent|missing)) {
+            return 302 https://www.google.com;
+          }
+          # For other 404s, you could return a custom page or also redirect
           return 302 https://www.google.com;
         }
+        
       metrics:
         enabled: true
       resources:
