--- a/applications/wordpress/ingress.yaml
+++ b/applications/wordpress/ingress.yaml
@@ -1,3 +1,4 @@
+# applications/wordpress/ingress.yaml
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -5,6 +6,16 @@ metadata:
   namespace: default
   annotations:
     kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      # Only handle WordPress-specific paths
+      location ~* ^/(wp-|index\.php|favicon\.ico|robots\.txt) {
+        try_files $uri $uri/ /index.php?$args;
+      }
+      
+      # Redirect other paths to WordPress index
+      location ~* ^/$ {
+        try_files $uri $uri/ /index.php?$args;
+      }
 spec:
   ingressClassName: nginx
   rules:
@@ -12,7 +23,35 @@ spec:
     http:
       paths:
       - path: /
+        pathType: Exact  # Changed to Exact match only for root
+        backend:
+          service:
+            name: wordpress
+            port:
+              number: 80
+      - path: /wp-admin
         pathType: Prefix
+        backend:
+          service:
+            name: wordpress
+            port:
+              number: 80
+      - path: /wp-content
+        pathType: Prefix
+        backend:
+          service:
+            name: wordpress
+            port:
+              number: 80
+      - path: /wp-includes
+        pathType: Prefix
+        backend:
+          service:
+            name: wordpress
+            port:
+              number: 80
+      - path: /index.php
+        pathType: Exact
         backend:
           service:
             name: wordpress
