--- a/applications/wordpress/ingress.yaml
+++ b/applications/wordpress/ingress.yaml
@@ -6,16 +6,6 @@ metadata:
   namespace: default
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-      # Only handle WordPress-specific paths
-      location ~* ^/(wp-|index\.php|favicon\.ico|robots\.txt) {
-        try_files $uri $uri/ /index.php?$args;
-      }
-      
-      # Redirect other paths to WordPress index
-      location ~* ^/$ {
-        try_files $uri $uri/ /index.php?$args;
-      }
 spec:
   ingressClassName: nginx
   rules:
@@ -23,7 +13,7 @@ spec:
     http:
       paths:
       - path: /
-        pathType: Exact  # Changed to Exact match only for root
+        pathType: Exact  # Only exact root path
         backend:
           service:
             name: wordpress
@@ -51,6 +41,20 @@ spec:
             port:
               number: 80
       - path: /index.php
+        pathType: Prefix  # Changed from Exact to Prefix
+        backend:
+          service:
+            name: wordpress
+            port:
+              number: 80
+      - path: /favicon.ico
+        pathType: Exact
+        backend:
+          service:
+            name: wordpress
+            port:
+              number: 80
+      - path: /robots.txt
         pathType: Exact
         backend:
           service:
