--- a/clusters/local/infrastructure.yaml
+++ b/clusters/local/infrastructure.yaml
@@ -46,4 +46,21 @@ spec:
     name: flux-system
   prune: true
   wait: true
-  timeout: 10m  
+  timeout: 10m 
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: monitoring
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: ingress-nginx
+  interval: 10m
+  path: "./infrastructure/monitoring"
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  prune: true
+  wait: true
+  timeout: 15m  
